--- a/templates/index.html
+++ b/templates/index.html
@@ -137,8 +137,8 @@ h3 {
         <div class="required-field">
             <label for="job_description">Job Description:</label>
             <textarea name="job_description" id="job_description"></textarea><br>
-            <label for="top_k">Number of Top Keywords from Job Description:</label>
-            <input type="number" name="top_k" id="top_k"><br>
+            <!-- <label for="top_k">Number of Top Keywords from Job Description:</label>
+            <input type="number" name="top_k" id="top_k"><br> -->
             <h3>Or</h3>
             <label for="keywords">Keywords (comma-separated):</label>
             <input type="text" name="keywords" id="keywords"><br>
